plugins {
  id 'org.springframework.boot' version '2.7.4'
  id 'io.spring.dependency-management' version '1.0.14.RELEASE'
  id 'java'
  id 'org.flywaydb.flyway' version '9.4.0'
}

group = 'com.vitaliy.kairachka'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
  mavenCentral()
}

dependencies {
  implementation 'org.springframework.boot:spring-boot-starter'

  //websocket
  implementation 'org.springframework.boot:spring-boot-starter-websocket'

  //security
  implementation 'org.mindrot:jbcrypt:0.4'

  //notification
  implementation 'org.springframework.boot:spring-boot-starter-quartz'

  //lombok
  compileOnly 'org.projectlombok:lombok:1.18.24'
  annotationProcessor 'org.projectlombok:lombok:1.18.24'
  annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

  //mapstruct
  compileOnly 'org.mapstruct:mapstruct:1.5.2.Final'
  annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'

  //db
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  implementation 'org.springframework.boot:spring-boot-starter-cache'
  runtimeOnly 'org.postgresql:postgresql'
  implementation 'org.flywaydb:flyway-core'

  //template
  implementation 'org.webjars:webjars-locator-core'
  implementation 'org.webjars:sockjs-client:1.5.1'
  implementation 'org.webjars:stomp-websocket:2.3.4'
  implementation 'org.webjars:bootstrap:5.2.0'
  implementation 'org.webjars:jquery:3.6.1'

  //test
  testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
  useJUnitPlatform()
}
